--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,7 +5,17 @@
 * {
   position: relative;
 }
+.tw-text-primary {
+  @apply text-[#4c4f65];
+}
 
+.tw-text-secondary {
+  @apply text-[#56596C];
+}
+
+.tw-text-secondary-dark {
+  @apply text-[#e3e2e2];
+}
 .tw-button {
   @apply bg-blue-500 text-white p-3 rounded-md w-full hover:bg-blue-600;
 }
@@ -18,8 +28,20 @@
   @apply flex gap-2 items-center text-blue-500 font-semibold hover:text-blue-600;
 }
 
-.bg-primary {
+.no-scroll {
+  overflow: hidden;
+}
+
+.tw-bg-primary {
   background-color: #f3f3f3;
+}
+
+.tw-bg-primary-loader {
+  @apply bg-[#252a60];
+}
+
+.tw-bg-secondary-loader {
+  @apply bg-[#1c1d25];
 }
 
 .li {
@@ -33,7 +55,7 @@
 }
 
 .li > a:before {
-  @apply bg-[#7fdbff] dark:bg-[#7fdb];
+  @apply bg-[#748FBD] dark:bg-[#213B6D];
   content: '';
   position: absolute;
   width: 100%;
@@ -52,32 +74,85 @@
   animation-fill-mode: forwards;
 }
 
-.fadeIn {
-  animation: fadeIn 1s ease-in-out;
+.sphere-container {
+  perspective: 1000px;
+  width: 300px;
+  height: 300px;
+  margin: 50px auto;
 }
 
-.slideIn {
-  animation: slideIn 1s ease-in-out;
+.sphere {
+  width: 100%;
+  height: 100%;
+  transform-style: preserve-3d;
+  transition: transform 0.5s ease;
 }
 
-@keyframes fadeIn {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
+.skill {
+  width: 100px;
+  height: 50px;
+  line-height: 50px;
+  text-align: center;
+  background-color: #f0f0f0;
+  border: 1px solid #ccc;
+  color: #2c2c;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform-origin: center center;
+  backface-visibility: hidden;
 }
 
-@keyframes slideIn {
-  from {
-    transform: translateY(20px);
-    opacity: 0;
-  }
-  to {
-    transform: translateY(0);
-    opacity: 1;
-  }
+.skill.active {
+  z-index: 1;
+}
+
+.form-control {
+  position: relative;
+  margin-bottom: 20px;
+}
+
+.form-control input,
+.form-control textarea {
+  background-color: transparent;
+  border: 0;
+  border-bottom: 2px #ccc solid;
+  width: 100%;
+  padding: 15px 0;
+  font-size: 18px;
+}
+
+.form-control input:focus,
+.form-control input:valid,
+.form-control textarea:focus,
+.form-control textarea:valid {
+  outline: 0;
+}
+
+.form-control label {
+  position: absolute;
+  top: 15px;
+  left: 0;
+  pointer-events: none;
+}
+
+.form-control label span {
+  display: inline-block;
+  font-size: 18px;
+  min-width: 5px;
+  transition: 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+}
+
+.form-control input:focus + label span,
+.form-control input:valid + label span,
+.form-control textarea:focus + label span,
+.form-control textarea:valid + label span {
+  transform: translateY(-30px);
+}
+
+.form-control input:-webkit-autofill,
+.form-control input:-webkit-autofill {
+  box-shadow: 0 0 0px 1000px transparent inset;
 }
 
 @keyframes hover-v {
@@ -116,8 +191,4 @@
     height: 5px;
     opacity: 0.02;
   }
-}
-
-::-webkit-scrollbar {
-  display: none;
 }
